[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aerospace-testbench"
version = "0.1.0"
description = "RF & EMC test platform for aerospace hardware validation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",           # async HTTP client + test client

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",         # async PostgreSQL driver
    "psycopg2-binary>=2.9.0",  # sync driver for Alembic CLI

    # Validation / settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Instrument control
    # NOTE: pyvisa and pyvisa-py are NOT run inside Docker.
    # They are installed on the HOST machine that has physical access
    # to GPIB adapters, serial ports, and instrument drivers (e.g. NI-VISA,
    # Keysight IO, or linux-gpib). The API calls the instrument layer
    # through a local socket / subprocess bridge so that the rest of the
    # stack CAN run in Docker while instrument I/O stays on the host.
    "pyvisa>=1.14.0",
    "pyvisa-py>=0.7.0",        # pure-Python backend (GPIB via linux-gpib, Serial, TCPIP)
    "pyserial>=3.5",           # serial port support for pyvisa-py
    "pyvisa-sim>=0.6.0",       # simulated instruments for CI / offline dev

    # Visualisation
    "bokeh>=3.4.0",

    # Reporting
    "jinja2>=3.1.0",
    "weasyprint>=62.0",

    # Utilities
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0",
    "types-pyserial>=3.5",
]

# CLI entrypoint — added in PR 4 when aerospace_testbench.api.main exists
# [project.scripts]
# testbench = "aerospace_testbench.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/aerospace_testbench"]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "S", "B", "C4", "PTH", "RUF"]
ignore = [
    "ANN101",  # self type annotation
    "ANN102",  # cls type annotation
    "S101",    # use of assert (pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=0"
# coverage threshold raised to 80 once initial implementation PRs land

# ── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/alembic/*"]
